--- a/index.css
+++ b/index.css
@@ -90,3 +90,14 @@ body{
     font-size: 28px;
     margin-top: -6px;
 }
+
+.weather{
+    display: none;
+}
+
+.error{
+    text-align:center;
+    margin-top: 10px;
+    font-size: 18px;
+    display: none;
+}
